@@ -302,7 +302,7 @@ public class StorageHelper {
             logger.warn("Failed to read storage records, ignoring.");
             return null;
         }
-        return !records.isEmpty() ? records.get(0) : null;
+        return !records.isEmpty() ? records.getFirst() : null;
     }
 
     private List<SignalStorageRecord> getSignalStorageRecords(final Collection<StorageId> storageIds) throws IOException {
